CORA-2316 (CORA-2303) move validate and search record to restClient